fix form radio field missing wrap

--- a/frontend/src/assets/styles/common/_form.scss
+++ b/frontend/src/assets/styles/common/_form.scss
@@ -69,6 +69,7 @@
       &-radio {
         display: flex;
         flex-direction: row;
+        flex-wrap: wrap;
         align-items: center;
         justify-content: flex-start;
         gap: 8px;
